debugged the find all talents service and made the test pass